# Agent-Mesh

./: .gitignore  Makefile  README.md  go.work  go.work.sum  projectreport.md  run.sh
.github/workflows/: ci.yml  release.yml
cli/: .goreleaser.yml  go.mod  go.sum
cli/cmd/: apikey.go  login.go  main.go  mcp.go  root.go  tail.go
cli/internal/authclient/: client.go  client_test.go
cli/internal/localconfig/: config.go  config_test.go
cli/internal/manifest/: manifest.go  manifest_test.go
deploy/: docker-compose.yml
docs/: RUNBOOK.md  otlp-mapping.md
docs/plan/: Architecture.md  Development Plan.md  Feature Roadmap.md  Limitations.md  MCP_Gateway_Architecture.md  Milestones.md  Product Requirements.md  Repository Structure.md  Risks.md  System Design.md  Technical Roadmap.md  Vision.md
examples/autogen-debate/: main.py
examples/crewai-research-crew/: main.py
examples/langgraph-support-bot/: main.py
examples/mock-crm-mcp-server/: README.md  go.mod  main.go
examples/openai-agents-sdk-handoff-demo/: main.py
examples/shared/: README.md  fixtures.py  prompts.py  tools.py
schema/clickhouse/: 001_spans.sql  002_chaos_columns.sql
schema/postgres/: 001_projects_and_api_keys.sql  002_replay_runs.sql  003_jobs.sql  004_mcp_registry.sql  005_alerts.sql  006_users.sql
sdk/integrations/autogen/: LIMITATIONS.md  pyproject.toml
sdk/integrations/autogen/agentmesh_autogen/: __init__.py  adapter.py
sdk/integrations/autogen/tests/: test_autogen_adapter.py
sdk/integrations/common/: pyproject.toml
sdk/integrations/common/agentmesh_integrations_common/: __init__.py  adapter.py  context.py  mapper.py  spans.py  testing.py
sdk/integrations/common/tests/: test_context.py  test_testing_helpers.py
sdk/integrations/crewai/: LIMITATIONS.md  pyproject.toml
sdk/integrations/crewai/agentmesh_crewai/: __init__.py  adapter.py
sdk/integrations/crewai/tests/: test_crewai.py  test_shared_workflow.py
sdk/integrations/langgraph/: LIMITATIONS.md  pyproject.toml
sdk/integrations/langgraph/agentmesh_langgraph/: __init__.py  adapter.py
sdk/integrations/langgraph/tests/: test_langgraph_adapter.py
sdk/integrations/openai-agents-sdk/: pyproject.toml
sdk/integrations/openai-agents-sdk/agentmesh_openai_agents/: __init__.py  _fake_model.py  processor.py
sdk/integrations/openai-agents-sdk/tests/: test_openai_agents.py
sdk/python/: pyproject.toml
sdk/python/agentmesh/: __init__.py  _span.py  chaos.py  exporter.py  replay_shim.py  tracer.py
sdk/python/tests/: test_chaos.py  test_exporter.py  test_replay_shim.py  test_span.py  test_tracer.py  test_tracer_chaos.py  test_tracer_replay.py
services/alerting-service/: Dockerfile  go.mod  go.sum
services/anomaly-detector/: Dockerfile  go.mod  go.sum
services/collector/: Dockerfile  go.mod  go.sum
services/jobs/: Dockerfile  go.mod  go.sum
services/mcp-gateway/: Dockerfile  go.mod  go.sum
services/query-api/: Dockerfile  go.mod  go.sum
services/realtime-gateway/: Dockerfile  go.mod  go.sum
services/replay-engine/: Dockerfile  go.mod
shared/: go.mod  go.sum
shared/authkeys/: authkeys.go  authkeys_test.go  postgres_store.go  postgres_store_integration_test.go
shared/config/: config.go  config_test.go
shared/errors/: errors.go  errors_test.go
shared/ids/: ids.go  ids_test.go
shared/logging/: logging.go  logging_test.go
shared/span/: span.go  span_test.go
tests/replay_regression/: LIMITATIONS.md  test_replay.py
web/console/: Dockerfile  index.html  package-lock.json  package.json
web/marketing/: Dockerfile  index.html  package-lock.json  package.json
(+137 files in other folders)
