[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh-sdk"
version = "0.1.0"
description = "AgentMesh instrumentation SDK: trace any Python agent's LLM and tool calls."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "grpcio>=1.60",
    "opentelemetry-proto>=1.20",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["agentmesh*"]
