[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh-openai-agents-sdk"
version = "0.1.0"
description = "AgentMesh reference integration stub."
requires-python = ">=3.9"
dependencies = [
    "agentmesh-sdk",
    "agentmesh-integrations-common"
]


[tool.setuptools.packages.find]
include = ["agentmesh_openai_agents*"]

[tool.uv.sources]
agentmesh-sdk = { path = "../../python", editable = true }
agentmesh-integrations-common = { path = "../common", editable = true }
